# foreng

./: .gitignore  CMakeLists.txt  README.md  foreng-project-file.md
chapter_10/: 10_3.f95
chapter_11/: 11_4.f95  11_6.f95
chapter_12/: 12_2.f95  12_3.f95  12_4.f95  12_7.f95  12_9.f95  ejovo_types@point.f95
chapter_13/: testing.f95
chapter_4/: 4.3  4_16.f95  4_19.f95  4_2.f95  4_5.f95  error_test  flight_of_ball
chapter_6/: 6.1  6.10  6.11  6.3  6.5  6.6  6.7  6.8  6_11.f95  6_8.f95
chapter_7/: 7_10.f95  7_15.f95  7_5.f95
chapter_8/: 8_12.f95  8_13.f95  8_17.f95  8_3.f95  exp  exploration.f95
chapter_9/: 9_15.f95  9_17.f95  9_19.f95  9_6.f95  9_7.f95  lib_test.f95  trig_degrees.f95  trig_exec.f95
doc/: index.html  search.html
doc/lists/: procedures.html
doc/module/: chapter_4.html
doc/proc/: is_alph.html  is_alphnum.html  is_lower.html  p4_1.html  p4_10.html  p4_11.html  p4_12.html  p4_13.html  p4_16.html  p4_17.html  p4_18.html  p4_8.html  to_upper.html
doc/program/: flight_of_ball.html
doc/sourcefile/: chapter_4.f90.html  error_test.f90.html
doc/tipuesearch/: tipuesearch_content.js
docs/: index.html  search.html
docs/interface/: abs_max_val.html  abs_max_val_r32.html  abs_max_val_r64.html  acosd.html  acosd_r32.html  acosd_r64.html  acosd~2.html  add_noise.html  arithmetic_mean.html  array_epsilon.html  array_epsilon_r32.html  array_epsilon_r64.html  asind.html  asind_r32.html  asind_r64.html  asind~2.html  atand.html  atand_r32.html  atand_r64.html  atand~2.html  back_sub.html  belongs_to.html  belongs_to_int.html  belongs_to_r32.html  belongs_to_r64.html  cart_to_pol.html  celcius_to_fahrenheit.html  celcius_to_kelvin.html  comp2pol.html  compass_to_cart.html  cosd.html  cosd_r32.html  cosd_r64.html  cosd~2.html  coshd.html  coshd_r32.html  coshd_r64.html  cross_product.html  deg_to_rad.html  deg_to_rad_r32.html  (+79 more)
docs/lists/: files.html  modules.html  procedures.html  programs.html  types.html
docs/module/: cart.html  chapter_4.html  chapter_5.html  chapter_6.html  chapter_7.html  compass.html  coordinates.html  ejovo.html  ejovo_types.html  foreng.html  foreng_env.html  foreng_io.html  foreng_io_char.html  foreng_io_string.html  foreng_math.html  foreng_math_conv.html  foreng_math_geom.html  foreng_math_misc.html  foreng_math_prob.html  foreng_math_sets.html  foreng_math_stats.html  foreng_math_trig.html  foreng_matrices.html  foreng_numeric.html  foreng_numeric_calculus.html  foreng_numeric_conversion.html  foreng_numeric_matrices.html  foreng_numeric_matrices_gauss.html  (+28 more)
exercises/: CMakeLists.txt  README.md
exercises/ch10/: 10.1  10.2  10.3  10.4  10_1.f90  10_2.f95  10_4.f95  CMakeLists.txt
exercises/ch11/: 11_1.f95  11_2.f90  11_6.f90  11_7.f90  CMakeLists.txt  diagnostic.f90  diagnostic.f95
exercises/ch12/: 12_4.f90  12_6.f95  12_8.f95  CMakeLists.txt  ejovo_types.f95
exercises/ch13/: CMakeLists.txt
exercises/ch15/: CMakeLists.txt  playing_with_pointers.f90
exercises/ch17/: CMakeLists.txt  coarray_test.f90  mpi_test.f90  open_mp_test.f90
exercises/ch4/: 4_12.f90  4_18.f90  4_20.f90  4_21.f90  4_22.f90  4_23.f90  4_24.f90  4_25.f90  4_26.f90  4_27.f90  4_28.f90  4_29.f90  4_3.f90  4_30.f90  4_31.f90  4_32.f90  4_33.f90  4_34.f90  4_35.f90  4_7.f90  4_9.f90  CMakeLists.txt  ch4_means.f90
exercises/ch5/: 5_1.f95  5_2.f90  5_3.f95  5_4.f95  5_5.f90  5_5.f95  5_5.inp  CMakeLists.txt
exercises/ch6/: 6_10.f90  6_12.f90  6_13.f90  6_14.f90  6_15.f90  6_16.f90  6_17.f90  6_19.f90  6_20.f90  6_4.f90  6_5.f95  6_6.f90  CMakeLists.txt  ch6_points.f90  ch6_sets.f90
exercises/ch7/: 7_13.f90  7_14.f95  7_16.f90  7_16.f95  7_18.f90  7_19.f95  7_20.f95  7_21.f95  7_23.f95  7_25.f90  7_26.f90  7_27.f90  7_28.f90  7_29.f90  7_31.f90  7_32.f90  7_33.f90  7_34.f90  7_4.f90  7_9.f90  CMakeLists.txt  ch7_functions.f90  ch7_timer.f90  linear_least_squares.f90
exercises/ch8/: .gitignore  8_1.f95  8_10.f95  8_11.f95  8_16.f95  8_16.inp  8_4.f95  8_7.f90  8_9.f95  CMakeLists.txt
exercises/ch9/: 9_14.f90  9_15.f90  9_20.f90  9_22.f90  9_6.f90  9_6.f95  9_7.f90  9_8.f90  CMakeLists.txt  test_prototype.f95
exercises/modules/: compass_trig.f90  ejovo_types.f90  ejovo_types@polar.f90  my_matmul_explicit.f90  my_matmul_sub.f90  new_types.f90  points_t@polar.f90  prototype.f90  radar.f90
modules/: test_radar.f95
src/: CMakeLists.txt  chapter_4.f90  chapter_5.f90  chapter_7.f90  rename.sh
src/ch11/: 11_3.f95
src/ch12/: ejovo_types@polar.f95
src/ch17/: CMakeLists.txt  ifort_test.f90  open_mp_test.f90
src/ch4/: 4_14.f95  4_15.f90  4_17.f90  4_18.f90  4_5.f90  4_6.f95  CMakeLists.txt  chapter_4.f90  error_test.f95
src/ch5/: CMakeLists.txt
src/ch7/: 7_12.f95  7_17.f95  7_18.f95  7_24.f95  7_3.f95  7_6.f95  7_7.f95  7_8.f95  ejovo_test.f95
src/ch8/: 8_14.f95  8_2.f95  8_5.f95  exploration.f95
src/ch9/: 9_18.f95  9_19.f95  9_23.f95  9_[1-5].f95  prototype@least_squares.f95  prototype@print_functions.f95  trig_test.f95
src/chapter_4/: 4_10.f95  4_11.f95  4_4.f95  4_5.f95  4_8.f95
src/chapter_5/: 5_6.f95
src/chapter_6/: 6_1.f95  6_3.f95  6_7.f95
src/chapter_7/: 7_1.f95  7_11.f95  7_2.f95
src/chapter_8/: 8_17.f95  8_6.f95  8_8.f95
src/chapter_9/: 9_8.f95  prototype.f95  trig_conversion.f95
src/demo/: CMakeLists.txt  demo.f90
src/foreng/: CMakeLists.txt  Config.cmake.in  foreng.f90  foreng_env.f90  math.f90  math_geom.f90  math_misc.f90  math_prob.f90  math_sets.f90  math_stats.f90  math_trig.f90  misc_test.f90  stats_test.f90
src/foreng/io/: CMakeLists.txt  io.f90  io_char.f90
src/foreng/math/: CMakeLists.txt  math.f90  math_conv.f90  math_geom.f90  math_misc.f90  math_prob.f90
src/foreng/numeric/: CMakeLists.txt  numeric_calculus.f90  numeric_conversion.f90  numeric_matrices.f90  numeric_regression.f90
src/foreng/science/: CMakeLists.txt  science.f90  science_const.f90  science_elec.f90  science_phys.f90
src/modules/: CMakeLists.txt  coordinates.f95  hyperbolics.f90  my_matmul_mod_parent.f90  rand001.f90  trig.f90
src/tests/: CMakeLists.txt  geom_test.f90  hyper_test.f90  prob_test.f90  trig_test.f90
(+407 files in other folders)
