set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MY_EX}/ch7)
# message("Chapter 7 include directories: ${CMAKE_Fortran_MODULE_DIRECTORY}")

add_executable(7_6 7_6.f90)
add_executable(7_10 7_10.f90) 
add_executable(7_12 7_12.f90)
add_executable(7_14 7_14.f90)
add_executable(7_15 7_15.f90)
add_executable(7_16 7_16.f90)
add_executable(7_18 7_18.f90)
add_executable(7_19 7_19.f90)
add_executable(7_20 7_20.f90)
add_executable(7_21 7_21.f90)
add_executable(7_23 7_23.f90)
add_executable(7_24 7_24.f90)
add_executable(7_25 7_25.f90)

target_link_libraries(7_10 ch7)
target_link_libraries(7_14 ch7)
target_link_libraries(7_15 ch7)
target_link_libraries(7_18 trig)
target_link_libraries(7_24 ch9)