set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MY_EX}/ch7)
# message("Chapter 7 include directories: ${CMAKE_Fortran_MODULE_DIRECTORY}")

add_library(lls linear_least_squares.f90)
add_library(ch7_timer ch7_timer.f90)
add_library(ch7_functions ch7_functions.f90)

target_link_libraries(lls ch4_means)

add_executable(7_6 7_6.f90)
add_executable(7_10 7_10.f90) 
add_executable(7_12 7_12.f90)
add_executable(7_14 7_14.f90)
add_executable(7_15 7_15.f90)
add_executable(7_16 7_16.f90)
add_executable(7_18 7_18.f90)
add_executable(7_19 7_19.f90)
add_executable(7_20 7_20.f90)
add_executable(7_21 7_21.f90)
add_executable(7_23 7_23.f90)
add_executable(7_24 7_24.f90)
add_executable(7_25 7_25.f90)
add_executable(7_26 7_26.f90)
add_executable(7_27 7_27.f90)
add_executable(7_28 7_28.f90)
add_executable(7_29 7_29.f90)
add_executable(7_31 7_31.f90)
add_executable(7_32 7_32.f90)
add_executable(7_33 7_33.f90)

target_link_libraries(7_10 ch7)
target_link_libraries(7_14 ch7)
target_link_libraries(7_15 ch7)
target_link_libraries(7_18 foreng)
target_link_libraries(7_24 ch9)
target_link_libraries(7_26 lls)
target_link_libraries(7_27 lls)
target_link_libraries(7_28 ch6_sets ch9)
target_link_libraries(7_29 ch7_timer)
target_link_libraries(7_31 ch7_functions)
target_link_libraries(7_32 foreng)
target_link_libraries(7_33 foreng)