set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MY_EX}/ch9)
make_directory(${MY_EX}/ch9)

add_executable(9_6 9_6.f90)
add_executable(9_7 9_7.f90)
add_executable(9_8 9_8.f90)
add_executable(9_14 9_14.f90)
add_executable(9_15 9_15.f90)
add_executable(9_17 9_17.f90)
add_executable(9_18 9_18.f90)
add_executable(9_19 9_19.f90)
add_executable(9_20 9_20.f90)
add_executable(9_22 9_22.f90)
add_executable(9_23 9_23.f90)

configure_file(9_17_pos.dat ${MY_EX}/ch9 COPYONLY)
configure_file(9_17_time.dat ${MY_EX}/ch9 COPYONLY)

target_link_libraries(9_7 ch9)
target_link_libraries(9_15 trig)
target_link_libraries(9_18 ch9)
target_link_libraries(9_20 ch9)
target_link_libraries(9_22 ch9)
target_link_libraries(9_23 ch9)
target_link_libraries(9_6 ch9)
target_link_libraries(9_8 ch9)