
# find_package(Coarray REQUIRED)

# link_directories(/home/ejovo13/Programming/Projecet_Euler/bin/lib)

# add_executable(coarrays coarray_playground.f90)

# include_directories(/home/ejovo13/Programming/Projecet_Euler/src/lib)


# target_compile_options(coarrays PUBLIC -coarray)
# target_link_libraries(coarrays eulerf)