# add_executable(4_2 4_2.f90)
# add_executable(4_3 4_3.f90)
# add_executable(4_4 4_4.f90)
# add_executable(4_5 4_5.f90)
# # add_executable(4_6 4_6.f90) Not an executable
# add_executable(4_7 4_7.f90)
# add_executable(4_8 4_8.f90)
# add_executable(4_9 4_9.f90)
# add_executable(4_10 4_10.f90)
# add_executable(4_11 4_11.f90)
# add_executable(4_12 4_12.f90)
# add_executable(4_14 4_14.f90)
# add_executable(4_15 4_15.f90)
# add_executable(4_16 4_16.f90)
# add_executable(4_17 4_17.f90)
# add_executable(4_18 4_18.f90)
# add_executable(4_19 4_19.f90)
# add_executable(error_test error_test.f90)
# add_executable(flight_of_ball flight_of_ball.f90)

add_library(ch4 chapter_4.f90)
